New files added - [ResetPassword.css,ResetPassword.js,ResetPassword.variables.json,ResetPassword.html] Files modified - [pages-config.json,app.variables.json,Cx2QueryExecutorServiceImpl.java,MyProfile.html,cx2-queries.hbm.xml,QueryExecutionController.java,MyProfile.variables.json,servicedef.xml,intercept-urls.json,project-security-provider.xml,cx2_query.json,Cx2QueryExecutorService.java,MyProfile.js] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -215,6 +215,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_ResetPassword" : {
+    "_id" : "wm-goToPage_ResetPassword-wm.NavigationVariable-1479884962543",
+    "name" : "goToPage_ResetPassword",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ResetPassword",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_Support" : {
     "_id" : "wm-goToPage_Support-wm.NavigationVariable-1478577248530",
     "name" : "goToPage_Support",
