--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -71,6 +71,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "ResetPassword",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "SFNewElectricConnection",
   "type" : "PAGE",
   "params" : [ {
