New files added - [ManageForms.js,ManageForms.html,ManageForms.css,ManageForms.variables.json,ManageForms] Files modified - [pages-config.json,MunicipalityAdministration.variables.json,ManageMuncipalityGroups.variables.json,MunicipalityAdministration.html,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -83,6 +83,17 @@
     "operation" : "gotoPage",
     "pageName" : "Main"
   },
+  "goToPage_ManageForms" : {
+    "_id" : "wm-goToPage_ManageForms-wm.NavigationVariable-1479980516604",
+    "name" : "goToPage_ManageForms",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ManageForms",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ManageGISData" : {
     "_id" : "wm-goToPage_ManageGISData-wm.NavigationVariable-1478683823337",
     "name" : "goToPage_ManageGISData",
