--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -23,6 +23,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "ManageForms",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ManageGISData",
   "type" : "PAGE",
   "params" : [ ]
