New files added - [FormCategoryMappingService.java,FormCategoryMappingController.java,FormCategoryMapping.java,FormCategoryMappingServiceImpl.java,FormCategoryMappingDao.java,EditForm.js,EditForm.css,EditForm.html,EditForm.variables.json,EditForm] Files modified - [ManageForms.js,cx2_published_dataModel.json,cx2-queries.hbm.xml,FormTypesServiceImpl.java,MunicipalityGroupsController.java,DataEntry.html,FormTypesController.java,ManageForms.css,FormTypesService.java,FormTypes.java,UsersController.java,StatesServiceImpl.java,FormCategoriesController.java,servicedef.xml,MunicipalityGroupMembersController.java,FormCategoriesServiceImpl.java,FormCategoriesService.java,FormCategories.java,DataEntry.variables.json,UsersServiceImpl.java,MunicipalitiesServiceImpl.java,db-connection-settings.json,ManageForms.html,Main.variables.json,pages-config.json,ManageForms.variables.json,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -11,6 +11,13 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "EditForm",
+  "type" : "PAGE",
+  "params" : [ {
+    "name" : "FormTypeId",
+    "type" : "integer"
+  } ]
+}, {
   "name" : "ForgotPassword",
   "type" : "PAGE",
   "params" : [ ]
