--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -11,7 +11,7 @@
   "dbName" : "cx2",
   "port" : "1433",
   "schemaName" : "cx2",
-  "tableFilter" : [ "ContractorApprovals", "Contractors", "FormCategories", "FormStatuses", "FormTypes", "GISRecords", "ManualFeeTypes", "Municipalities", "Roles", "SFNewResidentialStructure", "States", "Subdivisions", "UserPasswordResetTokens", "Users", "UserSubscriptions", "SFNewElectricConnection", "Holidays", "FormProcessStatuses", "GroupDetails", "MunicipalityGroups", "MunicipalityGroupMembers" ],
+  "tableFilter" : [ "ContractorApprovals", "Contractors", "FormCategories", "FormStatuses", "FormTypes", "GISRecords", "ManualFeeTypes", "Municipalities", "Roles", "SFNewResidentialStructure", "States", "Subdivisions", "UserPasswordResetTokens", "Users", "UserSubscriptions", "SFNewElectricConnection", "Holidays", "FormProcessStatuses", "GroupDetails", "MunicipalityGroups", "MunicipalityGroupMembers", "FormCategoryMapping" ],
   "schemaFilter" : [ ],
   "impersonateUser" : false,
   "activeDirectoryDomain" : null,
