--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -64,6 +64,25 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_EditForm" : {
+    "_id" : "wm-goToPage_EditForm-wm.NavigationVariable-1480049657857",
+    "name" : "goToPage_EditForm",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ {
+      "target" : "pageName",
+      "value" : "EditForm",
+      "type" : "list"
+    } ],
+    "operation" : "gotoPage",
+    "pageName" : "EditForm",
+    "dataSet" : [ {
+      "type" : "integer",
+      "target" : "FormTypeId",
+      "value" : "bind:Widgets.livelist1.selecteditem.id"
+    } ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ForgotPassword" : {
     "_id" : "wm-goToPage_ForgotPassword-wm.NavigationVariable-1479880545540",
     "name" : "goToPage_ForgotPassword",
