New files added - [MyCompany.js,MyCompany.html,MyCompany.variables.json,MyCompany.css,MyCompany] Files modified - [pages-config.json,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -223,6 +223,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_MyCompany" : {
+    "_id" : "wm-goToPage_MyCompany-wm.NavigationVariable-1480408882347",
+    "name" : "goToPage_MyCompany",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "MyCompany",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_MyMunicipality" : {
     "_id" : "wm-goToPage_MyMunicipality-wm.NavigationVariable-1478577159145",
     "name" : "goToPage_MyMunicipality",
