--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -74,6 +74,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "MyCompany",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "MyMunicipality",
   "type" : "PAGE",
   "params" : [ ]
