New files added - [CompanyUsers.js,CompanyMunicipalities.css,CompanyMunicipalities.js,CompanyForms.html,CompanyMunicipalities.variables.json,CompanyProfile.js,VendorApplication.html,CompanyForms.css,VendorApplication.js,CompanyForms.variables.json,VendorApplication.css,CompanyProfile.variables.json,CompanyProfile.html,CompanyUsers.css,VendorApplication.variables.json,CompanyMunicipalities.html,CompanyUsers.variables.json,CompanyUsers.html,CompanyForms.js,CompanyProfile.css,CompanyUsers,CompanyMunicipalities,CompanyForms,CompanyProfile,VendorApplication] Files modified - [pages-config.json,Main.html,MyCompany.html,DataEntry.html,DataEntry.variables.json,DataEntry.js,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -42,6 +42,50 @@
     "saveInPhonegap" : false,
     "controller" : "Users"
   },
+  "goToPage_CompanyForms" : {
+    "_id" : "wm-goToPage_CompanyForms-wm.NavigationVariable-1480417618463",
+    "name" : "goToPage_CompanyForms",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "CompanyForms",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
+  "goToPage_CompanyMunicipalities" : {
+    "_id" : "wm-goToPage_CompanyMunicipalities-wm.NavigationVariable-1480417535902",
+    "name" : "goToPage_CompanyMunicipalities",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "CompanyMunicipalities",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
+  "goToPage_CompanyProfile" : {
+    "_id" : "wm-goToPage_CompanyProfile-wm.NavigationVariable-1480417810969",
+    "name" : "goToPage_CompanyProfile",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "CompanyProfile",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
+  "goToPage_CompanyUsers" : {
+    "_id" : "wm-goToPage_CompanyUsers-wm.NavigationVariable-1480417475427",
+    "name" : "goToPage_CompanyUsers",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "CompanyUsers",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_CXAdmin" : {
     "_id" : "wm-goToPage_CXAdmin-wm.NavigationVariable-1478577233423",
     "name" : "goToPage_CXAdmin",
@@ -297,6 +341,17 @@
     "dataBinding" : [ ],
     "operation" : "gotoPage",
     "pageName" : "UserCreation",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
+  "goToPage_VendorApplication" : {
+    "_id" : "wm-goToPage_VendorApplication-wm.NavigationVariable-1480415119127",
+    "name" : "goToPage_VendorApplication",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "VendorApplication",
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
