--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -7,6 +7,22 @@
   "type" : "PARTIAL",
   "params" : [ ]
 }, {
+  "name" : "CompanyForms",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "CompanyMunicipalities",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "CompanyProfile",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "CompanyUsers",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "DataEntry",
   "type" : "PAGE",
   "params" : [ ]
@@ -119,6 +135,10 @@
   "params" : [ ]
 }, {
   "name" : "UserCreation",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "VendorApplication",
   "type" : "PAGE",
   "params" : [ ]
 }, {
