New files added - [VendorAdminsServiceImpl.java,VendorAdmins.java,VendorAdminsDao.java,VendorAdminsController.java,VendorAdminsService.java] Files modified - [cx2_published_dataModel.json,CompanyMunicipalities.js,VendorServiceImpl.java,QueryExecutionController.java,Cx2QueryExecutorServiceImpl.java,UsersController.java,VendorApprovals.java,cx2_query.json,FormStatusesServiceImpl.java,MunicipalitiesServiceImpl.java,FormTypesServiceImpl.java,cx2-queries.hbm.xml,Vendor.java,VendorService.java,VendorController.java,StatesServiceImpl.java,Users.java,UsersService.java,CompanyMunicipalities.html,Cx2QueryExecutorService.java,UsersServiceImpl.java,db-connection-settings.json,Main.html,CompanyProfile.html,CompanyProfile.js,CompanyMunicipalities.variables.json,servicedef.xml,DataEntry.html,DataEntry.variables.json,CompanyProfile.variables.json,DataEntry.js] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -11,7 +11,7 @@
   "dbName" : "cx2",
   "port" : "1433",
   "schemaName" : "cx2",
-  "tableFilter" : [ "ContractorTypes", "FormCategories", "FormCategoryMapping", "FormStatuses", "FormTypes", "GISRecords", "Holidays", "ManualFeeTypes", "Municipalities", "MunicipalityGroupMembers", "MunicipalityGroups", "Roles", "SFNewElectricConnection", "SFNewResidentialStructure", "States", "Subdivisions", "UserPasswordResetTokens", "Users", "UserSubscriptions", "Vendor", "VendorApprovals" ],
+  "tableFilter" : [ "ContractorTypes", "FormCategories", "FormCategoryMapping", "FormStatuses", "FormTypes", "GISRecords", "Holidays", "ManualFeeTypes", "Municipalities", "MunicipalityGroupMembers", "MunicipalityGroups", "Roles", "SFNewElectricConnection", "SFNewResidentialStructure", "States", "Subdivisions", "UserPasswordResetTokens", "Users", "UserSubscriptions", "Vendor", "VendorApprovals", "VendorAdmins" ],
   "schemaFilter" : [ ],
   "impersonateUser" : false,
   "activeDirectoryDomain" : null,
