New files added - [ManageMunicipalityVendors.js,ManageMunicipalityVendors.css,ManageMunicipalityVendors.variables.json,ManageMunicipalityVendors.html,ManageMunicipalityVendors] Files modified - [pages-config.json,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -62,6 +62,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "ManageMunicipalityVendors",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ManageSubscriptions",
   "type" : "PAGE",
   "params" : [ ]
