--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -190,6 +190,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_ManageMunicipalityVendors" : {
+    "_id" : "wm-goToPage_ManageMunicipalityVendors-wm.NavigationVariable-1480585076347",
+    "name" : "goToPage_ManageMunicipalityVendors",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ManageMunicipalityVendors",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ManageSubscriptions" : {
     "_id" : "wm-goToPage_ManageSubscriptions-wm.NavigationVariable-1478603979180",
     "name" : "goToPage_ManageSubscriptions",
