New files added - [] Files modified - [cx2_published_dataModel.json,VendorServiceImpl.java,cx2-queries.hbm.xml,FormTypesServiceImpl.java,QueryExecutionController.java,VendorApplication.js,Vendor.java,VendorService.java,DataEntry.html,VendorAdminsController.java,Cx2QueryExecutorServiceImpl.java,UsersController.java,VendorController.java,StatesServiceImpl.java,ManageMunicipalities.html,servicedef.xml,VendorApplication.variables.json,topnav.html,cx2_query.json,Cx2QueryExecutorService.java,DataEntry.variables.json,UsersServiceImpl.java,MunicipalitiesServiceImpl.java,FormStatusesServiceImpl.java,db-connection-settings.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
@@ -41,14 +41,14 @@
     "owner" : "Page",
     "category" : "wm.LiveVariable",
     "dataBinding" : [ ],
-    "operation" : "read",
+    "operation" : "insert",
     "dataSet" : [ ],
     "type" : "Vendor",
     "isList" : true,
     "saveInPhonegap" : false,
     "maxResults" : 20,
     "designMaxResults" : 10,
-    "onSuccess" : "Variables.UpdateAsCXVendorAdmin.invoke()",
+    "onSuccess" : "Variables.UpdateAsCXVendorAdmin.invoke();VendorDataonSuccess($event, $scope)",
     "inFlightBehavior" : "executeLast",
     "startUpdate" : false,
     "autoUpdate" : false,
@@ -446,6 +446,7 @@
       "package" : "com.civicxpress.cx2.Vendor"
     } ],
     "filterFields" : { },
+    "inputFields" : { },
     "package" : "com.civicxpress.cx2.Vendor"
   }
 }
