New files added - [] Files modified - [CompanyMunicipalities.variables.json,CompanyMunicipalities.html,ManageForms.js,ManageForms.html,ManageForms.variables.json,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -123,7 +123,7 @@
     "dataSet" : [ {
       "type" : "integer",
       "target" : "FormTypeId",
-      "value" : "bind:Widgets.livelist1.selecteditem.id"
+      "value" : "bind:Widgets.gridFormtypes.selecteditem.id"
     } ],
     "pageTransitions" : "none"
   },
