New files added - [] Files modified - [leftnav.html,roles.json,Cx2QueryExecutorServiceImpl.java,cx2-queries.hbm.xml,QueryExecutionController.java,MyCompany.js,servicedef.xml,MyCompany.variables.json,project-security-provider.xml,cx2_query.json,Cx2QueryExecutorService.java,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -439,6 +439,19 @@
     "redirectTo" : "Login",
     "useDefaultSuccessHandler" : true
   },
+  "MyCompaniesCount" : {
+    "_id" : "wm-MyCompaniesCount-wm.Variable-1480937483790",
+    "name" : "MyCompaniesCount",
+    "owner" : "App",
+    "category" : "wm.Variable",
+    "dataBinding" : [ ],
+    "dataSet" : {
+      "dataValue" : ""
+    },
+    "type" : "string",
+    "isList" : false,
+    "saveInPhonegap" : false
+  },
   "NewUserToLogin" : {
     "_id" : "wm-NewUserToLogin-wm.NavigationVariable-1478606207596",
     "name" : "NewUserToLogin",
