--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -42,6 +42,26 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "MCNewElectricConnection",
+  "type" : "PAGE",
+  "params" : [ {
+    "name" : "FormId",
+    "type" : "string"
+  }, {
+    "name" : "MunicipalityId",
+    "type" : "string"
+  } ]
+}, {
+  "name" : "MCNewResidentialStructure",
+  "type" : "PAGE",
+  "params" : [ {
+    "name" : "FormId",
+    "type" : "string"
+  }, {
+    "name" : "MunicipalityId",
+    "type" : "string"
+  } ]
+}, {
   "name" : "Main",
   "type" : "PAGE",
   "params" : [ ]
@@ -109,6 +129,16 @@
   "name" : "NewFrom",
   "type" : "PAGE",
   "params" : [ ]
+}, {
+  "name" : "PUDApplication",
+  "type" : "PAGE",
+  "params" : [ {
+    "name" : "FormId",
+    "type" : "integer"
+  }, {
+    "name" : "MunicipalityId",
+    "type" : "integer"
+  } ]
 }, {
   "name" : "ResetPassword",
   "type" : "PAGE",
