--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -11,7 +11,7 @@
   "dbName" : "cx2",
   "port" : "1433",
   "schemaName" : "cx2",
-  "tableFilter" : [ "ContractorTypes", "FormCategories", "FormCategoryMapping", "FormStatuses", "FormTypes", "GISRecords", "Holidays", "ManualFeeTypes", "Municipalities", "MunicipalityGroupMembers", "MunicipalityGroups", "Roles", "SFNewElectricConnection", "SFNewResidentialStructure", "States", "Subdivisions", "UserPasswordResetTokens", "Users", "UserSubscriptions", "Vendor", "VendorAdmins", "VendorApprovals", "VendorUsers", "MCNewResidentialStructure", "MCNewElectricConnection", "PUDApplication" ],
+  "tableFilter" : [ "ContractorTypes", "FormCategories", "FormCategoryMapping", "FormStatuses", "FormTypes", "GISRecords", "Holidays", "ManualFeeTypes", "Municipalities", "MunicipalityGroupMembers", "MunicipalityGroups", "Roles", "SFNewElectricConnection", "SFNewResidentialStructure", "States", "Subdivisions", "UserPasswordResetTokens", "Users", "UserSubscriptions", "Vendor", "VendorAdmins", "VendorApprovals", "VendorUsers", "MCNewResidentialStructure", "MCNewElectricConnection", "PUDApplication", "FormFee" ],
   "schemaFilter" : [ ],
   "impersonateUser" : false,
   "activeDirectoryDomain" : null,
