New files added - [] Files modified - [MunicipalitySettings.html,MunicipalitySettings.variables.json,CompanyProfile.html,CompanyProfile.js,VendorApplication.html,Main.js,VendorApplication.variables.json,CompanyProfile.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.variables.json
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.variables.json
@@ -31,11 +31,7 @@
     "name" : "AllSates",
     "owner" : "Page",
     "category" : "wm.LiveVariable",
-    "dataBinding" : [ {
-      "target" : "stateName",
-      "value" : "bind:Widgets.textState.query",
-      "type" : "string"
-    } ],
+    "dataBinding" : [ ],
     "operation" : "read",
     "dataSet" : [ ],
     "type" : "States",
@@ -44,73 +40,8 @@
     "maxResults" : 20,
     "designMaxResults" : 10,
     "inFlightBehavior" : "executeLast",
-    "startUpdate" : false,
-    "autoUpdate" : true,
-    "transformationRequired" : false,
-    "liveSource" : "cx2",
-    "ignoreCase" : false,
-    "matchMode" : "start",
-    "propertiesMap" : {
-      "columns" : [ {
-        "fieldName" : "id",
-        "type" : "integer",
-        "fullyQualifiedType" : "integer",
-        "columnName" : "ID",
-        "isPrimaryKey" : true,
-        "notNull" : true,
-        "length" : 255,
-        "precision" : 10,
-        "generator" : "identity",
-        "isRelated" : false,
-        "defaultValue" : "",
-        "scale" : 0
-      }, {
-        "fieldName" : "stateName",
-        "type" : "string",
-        "fullyQualifiedType" : "string",
-        "columnName" : "StateName",
-        "isPrimaryKey" : false,
-        "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
-        "generator" : "assigned",
-        "isRelated" : false,
-        "defaultValue" : "",
-        "scale" : 0
-      } ],
-      "entityName" : "States",
-      "fullyQualifiedName" : "com.civicxpress.cx2.States",
-      "tableType" : "TABLE",
-      "primaryFields" : [ "id" ]
-    },
-    "bindCount" : 1,
-    "tableName" : "States",
-    "tableType" : "TABLE",
-    "properties" : [ ],
-    "relatedTables" : [ ],
-    "filterFields" : { },
-    "package" : "com.civicxpress.cx2.States"
-  },
-  "DefaultStateObj" : {
-    "_id" : "wm-DefaultStateObj-wm.LiveVariable-1479636468812",
-    "name" : "DefaultStateObj",
-    "owner" : "Page",
-    "category" : "wm.LiveVariable",
-    "dataBinding" : [ {
-      "target" : "id",
-      "value" : "bind:Variables.SelectedMunicipalityObj.firstRecord.stateId",
-      "type" : "number"
-    } ],
-    "operation" : "read",
-    "dataSet" : [ ],
-    "type" : "States",
-    "isList" : false,
-    "saveInPhonegap" : false,
-    "maxResults" : 20,
-    "designMaxResults" : 10,
-    "inFlightBehavior" : "executeLast",
-    "startUpdate" : false,
-    "autoUpdate" : true,
+    "startUpdate" : true,
+    "autoUpdate" : false,
     "transformationRequired" : false,
     "liveSource" : "cx2",
     "ignoreCase" : false,
@@ -544,7 +475,7 @@
       "tableType" : "TABLE",
       "primaryFields" : [ "id" ]
     },
-    "bindCount" : 33,
+    "bindCount" : 34,
     "tableName" : "Municipalities",
     "tableType" : "TABLE",
     "properties" : [ "states" ],
