--- a/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
@@ -23,6 +23,19 @@
     "controller" : "QueryExecution",
     "spinnerContext" : "page"
   },
+  "Today" : {
+    "_id" : "wm-Today-wm.Variable-1481126057341",
+    "name" : "Today",
+    "owner" : "Page",
+    "category" : "wm.Variable",
+    "dataBinding" : [ ],
+    "dataSet" : {
+      "dataValue" : 1481049000000
+    },
+    "type" : "date",
+    "isList" : false,
+    "saveInPhonegap" : false
+  },
   "UpdateAsCXVendorAdmin" : {
     "_id" : "wm-UpdateAsCXVendorAdmin-wm.ServiceVariable-1480499074562",
     "name" : "UpdateAsCXVendorAdmin",
