New files added - [] Files modified - [leftnav.js,VendorApplication.html,VendorApplication.js,VendorApplication.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
@@ -8,7 +8,7 @@
     "dataSet" : [ {
       "label" : "Home",
       "icon" : "glyphicon glyphicon-home",
-      "link" : "#/MyCompany"
+      "link" : "#/Main"
     }, {
       "label" : "VendorApplication",
       "icon" : "wi wi-ellipsis-v",
