New files added - [NewForm.variables.json,NewForm.js,NewForm.html,NewForm.css] Files modified - [leftnav.js,pages-config.json,Main.html,Main.js,cx2_published_dataModel.json,VendorServiceImpl.java,FormTypesServiceImpl.java,MunicipalityGroupsController.java,FormStatuses.java,MunicipalityGroups.java,MunicipalitiesController.java,FormTypes.java,UsersController.java,StatesServiceImpl.java,MunicipalityGroupsServiceImpl.java,MunicipalityGroupsService.java,servicedef.xml,GisrecordsController.java,UsersServiceImpl.java,MunicipalitiesServiceImpl.java,FormStatusesServiceImpl.java,db-connection-settings.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -126,6 +126,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "NewForm",
+  "type" : "PARTIAL",
+  "params" : [ ]
+}, {
   "name" : "NewFrom",
   "type" : "PAGE",
   "params" : [ ]
