New files added - [] Files modified - [SFNewElectricConnection.variables.json,PUDApplication.js,pages-config.json,Main.html,MCNewElectricConnection.variables.json,NewForm.js,NewForm.html,PUDApplication.variables.json,MCNewResidentialStructure.js,app.variables.json,SFNewElectricConnection.js,MCNewElectricConnection.js,PUDApplication.html,Main.js,SFNewResidentialStructure.js,SFNewElectricConnection.html,MCNewResidentialStructure.variables.json,SFNewResidentialStructure.variables.json] Refactored files - [] Fixed bugs - [] Removed files - [NewFrom.html,NewFrom.css,NewFrom.js,NewFrom.variables.json]

--- a/src/main/webapp/pages/PUDApplication/PUDApplication.variables.json
+++ b/src/main/webapp/pages/PUDApplication/PUDApplication.variables.json
@@ -4,8 +4,12 @@
     "name" : "Cx2PUDApplication",
     "owner" : "Page",
     "category" : "wm.LiveVariable",
-    "dataBinding" : [ ],
-    "operation" : "read",
+    "dataBinding" : [ {
+      "target" : "guid",
+      "value" : "bind:setGUID",
+      "type" : "string"
+    } ],
+    "operation" : "insert",
     "dataSet" : [ ],
     "type" : "Pudapplication",
     "isList" : false,
@@ -55,6 +59,35 @@
           "targetTable" : "FormTypes",
           "scale" : 0
         }, {
+          "fieldName" : "municipalityGroupsByReadAccess",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "ReadAccess",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 10,
+          "generator" : "assigned",
+          "isRelated" : true,
+          "defaultValue" : "",
+          "relatedColumnName" : "readAccess",
+          "targetTable" : "MunicipalityGroups",
+          "scale" : 0
+        }, {
+          "fieldName" : "municipalityGroupsByProcessOwners",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "ProcessOwners",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 10,
+          "generator" : "assigned",
+          "isRelated" : true,
+          "relatedColumnName" : "processOwners",
+          "targetTable" : "MunicipalityGroups",
+          "scale" : 0
+        }, {
           "fieldName" : "id",
           "type" : "integer",
           "fullyQualifiedType" : "integer",
@@ -64,45 +97,6 @@
           "length" : 255,
           "precision" : 10,
           "generator" : "identity",
-          "isRelated" : false,
-          "defaultValue" : "",
-          "scale" : 0
-        }, {
-          "fieldName" : "processOwners",
-          "type" : "string",
-          "fullyQualifiedType" : "string",
-          "columnName" : "ProcessOwners",
-          "isPrimaryKey" : false,
-          "notNull" : false,
-          "length" : 255,
-          "precision" : 19,
-          "generator" : "assigned",
-          "isRelated" : false,
-          "defaultValue" : "",
-          "scale" : 0
-        }, {
-          "fieldName" : "readAccess",
-          "type" : "string",
-          "fullyQualifiedType" : "string",
-          "columnName" : "ReadAccess",
-          "isPrimaryKey" : false,
-          "notNull" : false,
-          "length" : 255,
-          "precision" : 19,
-          "generator" : "assigned",
-          "isRelated" : false,
-          "defaultValue" : "",
-          "scale" : 0
-        }, {
-          "fieldName" : "writeAccess",
-          "type" : "string",
-          "fullyQualifiedType" : "string",
-          "columnName" : "WriteAccess",
-          "isPrimaryKey" : false,
-          "notNull" : false,
-          "length" : 255,
-          "precision" : 19,
-          "generator" : "assigned",
           "isRelated" : false,
           "defaultValue" : "",
           "scale" : 0
@@ -275,6 +269,18 @@
           "isRelated" : false,
           "defaultValue" : "",
           "scale" : 0
+        }, {
+          "fieldName" : "report",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "Report",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 19,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "scale" : 0
         } ]
       }, {
         "fieldName" : "formTypes",
@@ -341,32 +347,6 @@
           "type" : "string",
           "fullyQualifiedType" : "string",
           "columnName" : "FormType",
-          "isPrimaryKey" : false,
-          "notNull" : false,
-          "length" : 255,
-          "precision" : 19,
-          "generator" : "assigned",
-          "isRelated" : false,
-          "defaultValue" : "",
-          "scale" : 0
-        }, {
-          "fieldName" : "permissionsReaders",
-          "type" : "string",
-          "fullyQualifiedType" : "string",
-          "columnName" : "PermissionsReaders",
-          "isPrimaryKey" : false,
-          "notNull" : false,
-          "length" : 255,
-          "precision" : 19,
-          "generator" : "assigned",
-          "isRelated" : false,
-          "defaultValue" : "",
-          "scale" : 0
-        }, {
-          "fieldName" : "permissionsWriters",
-          "type" : "string",
-          "fullyQualifiedType" : "string",
-          "columnName" : "PermissionsWriters",
           "isPrimaryKey" : false,
           "notNull" : false,
           "length" : 255,
@@ -903,6 +883,19 @@
         "isRelated" : false,
         "defaultValue" : "",
         "scale" : 0
+      }, {
+        "fieldName" : "guid",
+        "type" : "string",
+        "fullyQualifiedType" : "string",
+        "columnName" : "GUID",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 255,
+        "precision" : 19,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "defaultValue" : "",
+        "scale" : 0
       } ],
       "entityName" : "Pudapplication",
       "fullyQualifiedName" : "com.civicxpress.cx2.Pudapplication",
@@ -933,6 +926,7 @@
       "package" : "com.civicxpress.cx2.Pudapplication"
     } ],
     "filterFields" : { },
+    "inputFields" : { },
     "package" : "com.civicxpress.cx2.Pudapplication"
   },
   "FormObj" : {
@@ -1337,32 +1331,6 @@
         "type" : "string",
         "fullyQualifiedType" : "string",
         "columnName" : "FormType",
-        "isPrimaryKey" : false,
-        "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
-        "generator" : "assigned",
-        "isRelated" : false,
-        "defaultValue" : "",
-        "scale" : 0
-      }, {
-        "fieldName" : "permissionsReaders",
-        "type" : "string",
-        "fullyQualifiedType" : "string",
-        "columnName" : "PermissionsReaders",
-        "isPrimaryKey" : false,
-        "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
-        "generator" : "assigned",
-        "isRelated" : false,
-        "defaultValue" : "",
-        "scale" : 0
-      }, {
-        "fieldName" : "permissionsWriters",
-        "type" : "string",
-        "fullyQualifiedType" : "string",
-        "columnName" : "PermissionsWriters",
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
@@ -1974,32 +1942,6 @@
         "type" : "string",
         "fullyQualifiedType" : "string",
         "columnName" : "FormType",
-        "isPrimaryKey" : false,
-        "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
-        "generator" : "assigned",
-        "isRelated" : false,
-        "defaultValue" : "",
-        "scale" : 0
-      }, {
-        "fieldName" : "permissionsReaders",
-        "type" : "string",
-        "fullyQualifiedType" : "string",
-        "columnName" : "PermissionsReaders",
-        "isPrimaryKey" : false,
-        "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
-        "generator" : "assigned",
-        "isRelated" : false,
-        "defaultValue" : "",
-        "scale" : 0
-      }, {
-        "fieldName" : "permissionsWriters",
-        "type" : "string",
-        "fullyQualifiedType" : "string",
-        "columnName" : "PermissionsWriters",
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
