--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -108,6 +108,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_DevFormDataEntry" : {
+    "_id" : "wm-goToPage_DevFormDataEntry-wm.NavigationVariable-1481543913034",
+    "name" : "goToPage_DevFormDataEntry",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "DevFormDataEntry",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_EditForm" : {
     "_id" : "wm-goToPage_EditForm-wm.NavigationVariable-1480049657857",
     "name" : "goToPage_EditForm",
