--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -27,6 +27,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "DevFormDataEntry",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "EditForm",
   "type" : "PAGE",
   "params" : [ {
